# TISMIR_structure

./: .gitignore  README.md  environment.yml  pyproject.toml
.matplotlib-cache/: fontlist-v390.json
configs/model/: baseline.yaml  temporal_text_adapter.yaml
configs/preprocessing/: audio.yaml  audio_audiomae_beat_this.yaml  audio_beat_this.yaml  audio_dac_beat_this.yaml  audio_encodec_beat_this.yaml  audio_madmom.yaml  audio_mert_beat_this.yaml  audio_mert_beat_this_beat_sync_only.yaml  audio_mert_madmom.yaml  audio_mert_madmom_salami.yaml  audio_mert_precomputed_madmom.yaml  audio_musicfm_beat_this.yaml  audio_panns_beat_this.yaml  audio_passt_beat_this.yaml  audio_songformer_beat_this.yaml  text.yaml  text_harmonix.yaml  text_harmonix_compact.yaml  text_harmonix_descriptive.yaml  text_harmonix_occurrence_descriptive.yaml  text_placeholder.yaml  (+3 more)
docs/: model_description.tex
scripts/: compare_annotation_policies.py  compare_annotation_sets.py  create_manifest.py  create_salami_manifest.py  diagnose.py  evaluate.py  grid_search_decoding.py  infer.py  inspect_training_data.py  preprocess_audio.py  preprocess_text.py  split_manifest.py  train.py  validate_dataset.py
src/tismir/: __init__.py  (+2 more)
tests/: test_adapter_model.py  test_annotations.py  test_audio_encoders.py  test_audio_preprocessing.py  test_beat_sync.py  test_beat_trackers.py  test_contrastive_losses.py  test_decoding.py  test_evaluation.py  test_inference.py  test_manifest.py  test_splits.py  test_text_encoders.py  test_text_preprocessing.py  test_training_data.py  test_training_loop.py  test_validation.py
(+87 files in other folders)
