[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tismir-structure"
version = "0.1.0"
description = "Text-conditioned music structure segmentation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
annotations = ["jams>=0.3.4"]
dev = ["pytest>=7.0"]
diagnostics = ["matplotlib>=3.8"]
torch = ["torch>=2.0"]
text = ["sentence-transformers>=2.2"]
beat = ["beat-this>=1.1.0", "soundfile>=0.12"]
hf-audio = ["torch>=2.0", "transformers>=4.40", "librosa>=0.10", "soundfile>=0.12", "soxr>=0.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
